Fixed: wflow-core - Universal Theme - Login Page footer covered fields when on-screen keyboard shown. @6.0-SNAPSHOT

--- a/wflow-core/src/main/resources/resources/themes/universal/css/style.css
+++ b/wflow-core/src/main/resources/resources/themes/universal/css/style.css
@@ -467,8 +467,6 @@ body#login #page #content {
 }
 
 body#login #page > footer {
-    position:absolute;
-    bottom: 0;
     width: 100%;
 }
 
